# BeeNum

./: .gitignore  .travis.yml  BigInteger.cpp  BigInteger.h  Bint.cpp  Bint.h  CMakeLists.txt  LICENSE  Makefile  Math.cpp  Math.h  README.md  main.cpp
.github/workflows/: release.yml
Bint/: arithmetics.cpp  bitoperations.cpp  comparison.cpp  io.cpp  shifts.cpp
include/BeeNum/: Bint.h  Brat.h  Math.h
include/Bint/: Bint.h  Brat.h  Math.h
src/: Bint.cpp  Brat.cpp  Math.cpp
src/Bint/: arithmetics.cpp  bitoperations.cpp  comparison.cpp  io.cpp  shifts.cpp
src/Brat/: arithmetics.cpp  comparison.cpp  io.cpp
tests/: addition.cpp  base.cpp  bits.cpp  brat-addition.cpp  brat-base.cpp  brat-comparison.cpp  brat-division.cpp  brat-gcd.cpp  brat-lcm.cpp  brat-point.cpp  brat-pows.cpp  brat-product.cpp  brat-subtract.cpp  brat.cpp  comparison.cpp  division.cpp  factorial.cpp  fibonnaci.cpp  gcd.cpp  lcm.cpp  main.cpp  pows.cpp  product.cpp  shifts.cpp  subtract.cpp
